--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,14 +1,14 @@
 @import 'tailwindcss';
 
 :root {
-	--background: #e2e2e2;
-	--foreground: #171717;
+	--background: #ffffff;
+	--foreground: #222222;
 }
 
 @media (prefers-color-scheme: dark) {
 	:root {
-		--background: #0a0a0a;
-		--foreground: #ededed;
+		--background: #222222;
+		--foreground: #ffffff;
 	}
 }
 @theme inline {
@@ -46,6 +46,7 @@ body {
 	background: var(--background);
 	color: var(--foreground);
 	font-family: var(--font-sans); /* 수정됨 */
+	letter-spacing: -0.025rem;
 }
 
 /* temp */
