--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,12 +2,12 @@
 
 :root {
 	--background: #ffffff;
-	--foreground: #222222;
+	--foreground: #000000;
 }
 
 @media (prefers-color-scheme: dark) {
 	:root {
-		--background: #222222;
+		--background: #000000;
 		--foreground: #ffffff;
 	}
 }
@@ -15,7 +15,10 @@
 	--color-background: var(--background);
 	--color-foreground: var(--foreground);
 	--color-blue: #0071e3;
-	--color-black: #2e2e30;
+	--color-secondary: #3c3c43;
+	--color-secondary-dark: #ebebf599;
+	--color-card-light: #ffffff;
+	--color-card-dark: #1c1c1e;
 }
 
 /* 
@@ -46,7 +49,7 @@ body {
 	background: var(--background);
 	color: var(--foreground);
 	font-family: var(--font-sans); /* 수정됨 */
-	letter-spacing: -0.025rem;
+	letter-spacing: -0.05rem;
 }
 
 /* temp */
