feat: 모달 구현중 ㅠㅠ

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -68,3 +68,12 @@ body {
 		display: none;
 	}
 }
+
+@layer utilities {
+	.scrollbar-hide {
+		&::-webkit-scrollbar {
+			display: none;
+		}
+		scrollbar-width: none;
+	}
+}
