feat: 다크모드 대응

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,27 +1,32 @@
 @import 'tailwindcss';
 
 :root {
-	--background: #e8e8ed;
+	--background: #ffffff;
 	--foreground: #000000;
 }
 
 @media (prefers-color-scheme: dark) {
 	:root {
-		--background: #212121;
+		--background: #1c1c1e;
 		--foreground: #ffffff;
 	}
 }
 @theme inline {
 	--color-background: var(--background);
 	--color-foreground: var(--foreground);
-	--color-blue: #0071e3;
+	--color-blue: #0a84ff;
 	--color-secondary: #3c3c43;
-	--color-secondary-dark: #ebebf599;
+	--color-secondary-dark: #d4d4d4;
+	--color-seperator: #c6c6c8;
+	--color-seperator-dark: #38383a;
 	--color-card-light: #ffffff;
-	--color-card-dark: #1c1c1e;
+	--color-card-dark: #2c2c2e;
 	--color-header-light: #bababa;
-	--color-header-dark: #17171c;
+	--color-header-dark: #000000;
 	--color-header-item-dark: #2c2c35;
+	--color-fab-dark: #000000;
+	--color-fab-text: #ffffff;
+	--color-fab-text-dark: #8e8e93;
 }
 
 @font-face {
